Using a BTC strategy in a game format to DCA into the market based on risk metrics

--- a/index.html
+++ b/index.html
@@ -1,15 +1,46 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Minesweeper</title>
-    <link rel="stylesheet" href="minesweeper.css">
-    <script src="lib/tests.js"></script>
-    <script src="lib/lib.js"></script>
-    <script src="minesweeper.js"></script>
-  </head>
-  <body>
-    <div id="message"></div>
-    <div id="notes"></div>
-    <div class="board"></div>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Financial Chart</title>
+    <!-- Include Chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+</head>
+<body>
+    <canvas id="myChart" width="400" height="200"></canvas>
+
+    <script>
+        // Your historical data here
+        const historicalData = [/* Your data points here */];
+
+        // Calculate risk based on historical data (replace this with your actual calculation)
+        function calculateRisk(data) {
+            return Math.random(); // Replace this with your risk calculation logic
+        }
+
+        // Initialize Chart.js
+        const ctx = document.getElementById('myChart').getContext('2d');
+        const myChart = new Chart(ctx, {
+            type: 'line',
+            data: {
+                labels: historicalData.map((_, index) => `Day ${index + 1}`),
+                datasets: [{
+                    label: 'BTC Price',
+                    data: historicalData,
+                    borderColor: 'blue',
+                    borderWidth: 1,
+                    fill: false
+                }]
+            }
+        });
+
+        // Calculate risk and execute strategy
+        const currentRisk = calculateRisk(historicalData);
+        console.log(`Current Risk: ${currentRisk}`);
+
+        // Add your trading strategy logic here based on the calculated risk
+        // Example: executeStrategy(currentRisk);
+    </script>
+</body>
 </html>
